--- a/assets/less/_includes/header.less
+++ b/assets/less/_includes/header.less
@@ -240,6 +240,7 @@ ul.dropdown-menu {
 
       &.active {
         left: 0;
+        z-index: 1;
       }
 
       li {
